@@ -6,7 +6,7 @@ void *array_index(const struct array *a, unsigned long p)
   unsigned long u = a->u;
   unsigned long ind = p * es;
 
-  if (ind > (es * u)) return 0;
+  if (ind >= (es * u)) return 0;
   return ((char *) a->x) + ind;
 }
 
@@ -16,6 +16,6 @@ void *array_index_ub(const struct array *a, unsigned long p)
   unsigned long al = a->a;
   unsigned long ind = p * es;
 
-  if (ind > (es * al)) return 0;
+  if (ind >= (es * al)) return 0;
   return ((char *) a->x) + ind;
 }
